# Fractalcash

./: .gitignore  Dockerfile  README.md  blockchain.py  config.json  create_telegram_bot.py  debug_info.txt  fractal_stats.txt  fractalcash  llm_validator.py  main.py  memory_update.json  requirements.txt  session_bot_creator.session  wallet.json  wallet.py  wallet.txt
config/: config.json  diag.json  transaction_template.json
data/: CMakeCache.txt  CMakeLists.txt  TargetDirectories.txt  blockchain.txt  diagnostics_report.txt  link.txt  requirements.txt
data/wallets/: miner.pem  miner.pub
data/wallets/user1/: wallet.pem  wallet.pub
docs/: whitepaper.txt
include/: block.h  config.h  fractalhash.h  liquidity_loop.h  merkle_tree.h  mining.h  network.h  node.h  transaction.h  transaction_handler.h  transaction_subset.h  wallet.h
src/: app.py  bindings.cpp  block.cpp  block.py  blockchain.py  config.py  conftest.py  fractal_chain.py  fractalhash.cpp  fractalhash.py  llm_validator.py  main.cpp  main.cpp.bak  main.py  merkle_tree.cpp  merkle_tree.py  minefracBlock.py  network.cpp  transaction.cpp  transaction_handler.cpp  transaction_management.py  transaction_subset.cpp  wallet.txt
src/fractalhash/: fractalhash.py
src/templates/: dashboard.html
src/utils/: config.py
templates/: dashboard.html  index.html
tests/: test_api.py  test_blockchain.py  test_hybrid_validation.py  test_transactions.py  test_validator.py
